force-app/main/default/objects/Bus_Association__c.object
<CustomObject>
    <fields>
        <fullName>Allow_Delete__c</fullName>
        <formula>OR(Has_Been_Current__c = FALSE, $Profile.Name = &quot;System Administrator&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Allow Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bus_Capacity__c</fullName>
        <formula>Bus_Stop__r.Bus_Route__r.Seat_Capacity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bus Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bus_Comment__c</fullName>
        <label>Bus Comment</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bus_Route_Copy__c</fullName>
        <label>Bus Route Copy</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bus_Route__c</fullName>
        <formula>Bus_Stop__r.Bus_Route__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bus Route#</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bus_Stop__c</fullName>
        <label>Bus Stop</label>
        <referenceTo>Bus_Stops__c</referenceTo>
        <relationshipLabel>Bus Service</relationshipLabel>
        <relationshipName>Bus_Associations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Comments_Starting_Dates__c</fullName>
        <description>Adds a starting and leaving date to the comments, if the child is leaving or starting in the next 30 days.</description>
        <formula>IF(AND( Student__r.Starting_Date_30__c =&quot;TRUE&quot;,Student__r.CloseDate&gt;TODAY()),&quot;Student Starting: &quot;&amp;  Student_Starting_Date__c &amp;&quot; &quot;&amp; Bus_Comment__c, IF( Student__r.Leaving_Date_30__c =&quot;TRUE&quot;,&quot;Student Leaving: &quot;&amp;  Student_Leaving_Date__c &amp;&quot; &quot;&amp; Bus_Comment__c,Bus_Comment__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Comments + Dates</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Student_Leaving_Date__c</fullName>
        <formula>Student__r.Leaving_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Student Leaving Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Copy_Student_Start_Date__c</fullName>
        <formula>Student__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Student Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_ID_18_Char__c</fullName>
        <description>The ID of the record in the alternate SFDC org, where applicable.</description>
        <externalId>true</externalId>
        <label>External ID (18 Char)</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Fee_Charged__c</fullName>
        <formula>Bus_Stop__r.Bus_Route__r.Yearly_Bus_Fee__c * of_Fee_Charged__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fee Charged</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>First_Date_of_Use__c</fullName>
        <label>First Date of Use</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Has_Been_Current__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in the formula field which defines when a bus service can be deleted</description>
        <label>Has Been Current</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invalid_Bus_Service__c</fullName>
        <formula>First_Date_of_Use__c &lt; Student__r.CloseDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invalid Bus Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Current_Check_Formula__c</fullName>
        <description>Used as a check to make sure the value in the Is_Current__c field is correct</description>
        <formula>AND( 
    First_Date_of_Use__c &lt;= TODAY(), 
    OR(
       TEXT(Student__r.Leaving_Date__c) = &quot;&quot;,
       Student__r.Leaving_Date__c &gt;= TODAY()
       ),
    OR( 
       Last_Date_of_Use__c &gt;= TODAY(), 
       TEXT(Last_Date_of_Use__c) = &quot;&quot; 
       ) 
    )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Current (Check Formula)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Current_Checkbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Current (Checkbox)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Current__c</fullName>
        <description>The field visible to users and used in reports. Reflects the value in Is_Current_Checkbox__c except in cases where a student&apos;s leaving date is before the &apos;Last Date of Use&apos; of a bus service.</description>
        <formula>IF(Copy_Student_Leaving_Date__c &lt; TODAY(), FALSE, Is_Current_Checkbox__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Current</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Date_of_Use_1__c</fullName>
        <description>Required in a time trigger to make bus services non-current before the end of the last day they are being used.</description>
        <formula>Last_Date_of_Use__c + 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Date of Use +1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Date_of_Use__c</fullName>
        <label>Last Date of Use</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mass_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mass Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Company_Paying__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The parent/company responsible for payment of bus fees</description>
        <label>Parent/Company Paying</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Bus Services Payable</relationshipLabel>
        <relationshipName>Bus_Service</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <formula>TEXT(Student__r.Owner.School__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Leaving_Date__c</fullName>
        <formula>Student__r.Copy_Leaving_Date_Format__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student Leaving Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Starting_Date__c</fullName>
        <formula>Student__r.Copy_Starting_Date_Format__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Student Starting Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <label>Student</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Bus_Associations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>of_Fee_Charged__c</fullName>
        <defaultValue>1</defaultValue>
        <label>% of Fee Charged</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Bus Service</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Bus Service</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bus Service</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>First_Date_of_Use_After_Stud_Start_Date</fullName>
        <active>true</active>
        <errorConditionFormula>Student__r.CloseDate &gt; First_Date_of_Use__c</errorConditionFormula>
        <errorMessage>The &apos;First Date of Use&apos; cannot be before the student&apos;s &apos;Starting Date&apos; at school</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>First_Date_of_Use_B4_Last_Date_Of_Use</fullName>
        <active>true</active>
        <errorConditionFormula>First_Date_of_Use__c &gt; Last_Date_of_Use__c</errorConditionFormula>
        <errorMessage>The bus service first date of use cannot be after the bus service last date of use</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_First_Date_of_Use_Change</fullName>
        <active>true</active>
        <description>Prevents a change in the &apos;First Date of Use&apos; of a student which could be an effort to bypass the auto-auditing system.</description>
        <errorConditionFormula>AND(
    OR(
       ISPICKVAL(Student__r.StageName, &quot;Enrolled&quot;),
       ISPICKVAL(Student__r.StageName, &quot;Left&quot;),
       AND(
           ISPICKVAL(Student__r.StageName, &quot;A/ Deposit&quot;),
           ISPICKVAL(Student__r.Add_to_Register__c, &quot;Yes&quot;)
           )
       ),
    ISCHANGED(First_Date_of_Use__c),
    PRIORVALUE(First_Date_of_Use__c)+7 &lt; TODAY(),
    PRIORVALUE(First_Date_of_Use__c) &lt; First_Date_of_Use__c, 
    $Profile.Name != &quot;System Administrator&quot; 
    )</errorConditionFormula>
        <errorMessage>You cannot change the &apos;First Date of Use&apos; of a bus service to a later date if their &apos;First Date of Use&apos; is 7 or more days in the past. Please contact group admin if you require further assistance.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Prevent_Multiple_Current_Bus_Services</fullName>
        <active>true</active>
        <errorConditionFormula>AND(Student__r.Count_Current_Bus_Services__c &gt; 1,   Is_Current_Check_Formula__c = TRUE)</errorConditionFormula>
        <errorMessage>You cannot have multiple current bus services</errorMessage>
    </validationRules>
</CustomObject>